# Adatszerkezetek_I

./: CMakeLists.txt
sapi_sales/headers/manager/: lab2.h  lab3.h  lab5.h  lab_manager.h
sapi_sales/headers/models/: product.h  product_array.h  user.h  user_array.h
sapi_sales/headers/stack/: product_stack.h
sapi_sales/src/: main.c
sapi_sales/src/manager/: lab2.c  lab3.c  lab5.c  lab_manager.c
sapi_sales/src/models/: product.c  product_array.c  user.c  user_array.c
sapi_sales/src/stack/: product_stack.c  product_stack.cpp
shared/headers/: errors.h  messages.h  useful.h
shared/src/: errors.c  messages.c
